                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 25-04-2006 updated: Italian language file (Thnx to kotix)
 - 25-04-2006 updated: Chinese (Simple) language file (Thnx to gamepc)
 - 25-04-2006 fixed: subtitles could end up disabled even if they where enabled in dvd menu
 - 25-04-2006 fixed: enable/disable of subtitles with an id higher than 8 would always fails
 - 25-04-2006 fixed: dvdplayer would restart when disabling/enabling substitles
 - 25-04-2006 changed: viz and karaoke is now separated.
 - 24-04-2006 fixed: paplayer can now play shoutcast mp3 streams
 - 24-04-2006 changed: content type is now available in the CFileItem, and thus available to players for codec selection
 - 24-04-2006 fixed: Edit/Delete source (bookmark) did not work properly from UI 
 - 24-04-2006 fixed: CFileCUrl::Exists (http reader) would return that a file at the specified url didn't exist even if it really did.
 - 24-04-2006 fixed: if a proxy port was set, shout:// would read unallocated memory.
 - 24-04-2006 updated: German language file
 - 24-04-2006 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 24-04-2006 updated: Norwegian language file (Thnx to vnm)
 - 24-04-2006 fixed: [ 1474938 ] non UTF-8 coded files displyed incorrectly (ccxstream share)
 - 24-04-2006 fixed: cdgreader tried to load on each frame
 - 24-04-2006 updated: french language file
 - 24-04-2006 fixed: Delete and Rename was disabled for stacked files.
 - 24-04-2006 changed: [ 1042376 ] Recording stops after 100 songs - now goes to 999 songs.
 - 24-04-2006 fixed: Unicode xbe descriptions were mangled.
 - 24-04-2006 fixed: [ 1475007 ] Sending button presses to webserver inconsistencies.